--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 
 server.port=5000
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://kms.cb2edujhwwmm.us-east-1.rds.amazonaws.com:3306/kms?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=mykms#001
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/KMS?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=passw0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
